<resources>
    <string name="app_name">FinanceTracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="nav_main">Main</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_app">About app</string>
    <string name="nav_history">History</string>
    <string name="other">Other</string>
    <string name="feedback">Feedback</string>

    <string name="add_button">Add</string>

    <string-array name="all_currency">
        <item>RUB</item>
        <item>USD</item>
    </string-array>

    <!--fragment_main_screen-->
    <string name="balance">Balance</string>
    <string name="RUB">RUB</string>
    <string name="USD">USD</string>
    <string name="new_account">Add Account</string>

    <!--fragment_another_currency-->
    <string-array name="currency_spinner">
        <item>USD</item>
    </string-array>


    <!--AboutApp-->
    <string name="appInfo">Finance tracking application</string>
    <string name="devBy">Developed by Aleksei Martoyas for Mob Dev School</string>

    <!--AddTransactionActivity-->
    <string name="quantity">Quantity</string>
    <string name="category">Category</string>
    <string name="account">Account</string>
    <string-array name="operation_type">
        <item>Income</item>
        <item>Expenditure</item>
    </string-array>
    <string-array name="category_items">
        <item>Products</item>
        <item>Clothes</item>
        <item>Health and Fitness</item>
        <item>Investments</item>
        <item>Communal payments</item>
        <item>Cafe and Restaurants</item>
        <item>Correction</item>
        <item>Other</item>
    </string-array>

    <!--AddAccount-->
    <string name="choose_account_type">Choose type of account</string>
    <string name="choose_currency_type">Choose type of currency</string>
    <string-array name="account_type">
        <item>Wallet</item>
        <item>Card</item>
    </string-array>

    <!--Will removed-->
    <string-array name="accounts_test">
        <item>card1</item>
        <item>wallet1</item>
        <item>card2</item>
        <item>all</item>
    </string-array>
</resources>
